# pping-lang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
.githooks/: commit-msg  pre-commit
deploy/runw/: .gitattributes  Dockerfile  README.md  bootstrap.sh  build_image.sh  build_so.sh  dashboard.py  deploy.sh  remote_deploy.sh  remote_k8s.sh  stop.sh
deploy/runw/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs/: autopilot-quickstart.md  bench-design-v0.1.md  case-study-1-padding.md  index.html  pping-lang-design-v0.2.md  pping-lang-pre-impl-rfc.md  release-checklist.md
examples/embedded/: demo.py  run_real_vllm.sh  run_vllm_020.sh  stress_vllm.sh  vllm_dashboard.py
native/ppingcupti/: .gitignore  README.md  ppingcupti.cpp  ppingcupti.h
pping_lang/: __init__.py  hardware.py  metrics_catalog.py  plugin.py  types.py
pping_lang/api/: __init__.py  queries.py  routes.py  schemas.py  server.py
pping_lang/bench/: __init__.py  client.py  microbench.py  runner.py
pping_lang/bench/prompts/: __init__.py  loader.py
pping_lang/bench/scenarios/: schema.py
pping_lang/collector/: __init__.py  nvml.py  vllm_stats.py
pping_lang/otel/: __init__.py  sink.py
pping_lang/report/: __init__.py  analysis.py  generator.py
pping_lang/report/templates/: report.html.j2
pping_lang/rules/: __init__.py  defaults.py  engine.py  loader.py  schema.py  store.py
pping_lang/sink/: __init__.py  base.py  tee.py
pping_lang/ui/: __init__.py  index.html
scripts/: setup-hooks.sh
src/pping_lang/: __init__.py  cli.py  clock.py  engine_pcs.py  hardware.py  metrics_catalog.py  plugin.py  types.py
src/pping_lang/api/: queries.py  routes.py  schemas.py
src/pping_lang/autopilot/: __init__.py  action_space.py  agent.py  api.py  config_review.py  kvfit.py  objective.py  promote.py  repeat.py  run.py  runner.py  sandbox.py  scorecard.py  search.py  session_store.py  workload.py
src/pping_lang/bench/: measurement.py  microbench.py  runner.py  store.py
src/pping_lang/bench/prompts/data/: __init__.py  code.jsonl  mixed-long.jsonl  mixed-short.jsonl
src/pping_lang/bench/scenarios/: __init__.py
src/pping_lang/collector/: __init__.py  cupti.py  nvml.py  vllm_stats.py
src/pping_lang/native/: Makefile  README.md  __init__.py  builder.py  ppingcupti.cpp  ppingcupti.h  sass_source.py
src/pping_lang/rules/: __init__.py  custom_store.py  diagnosis_config.py  diagnosis_engine.py  diagnosis_rules.py  diagnosis_runtime.py  diagnosis_tree.py  engine.py  operating_point.py  schema.py
src/pping_lang/sink/: base.py  local.py  metric_log.py  tee.py
src/pping_lang/ui/: _ap_preview.html  _diag-redesign.html  dashboard.css  dashboard.js  index.html
tests/: test_api_bench.py  test_api_routes.py  test_api_rules_crud.py  test_api_scaling.py  test_api_server_lifecycle.py  test_api_ui.py  test_autopilot.py  test_bench_measurement.py  test_bench_prompts.py  test_bench_runner.py  test_bench_schema.py  test_bench_slo_spec.py  test_bench_store.py  test_bench_sweep.py  test_collector_cupti.py  test_collector_nvml.py  test_collector_vllm.py  test_custom_rules.py  test_diagnosis_config.py  test_diagnosis_engine.py  test_diagnosis_rules.py  test_diagnosis_runtime.py  test_diagnosis_tree.py  test_e2e_marquee.py  test_hardware.py  test_metric_log.py  test_metrics_catalog.py  test_native_packaging.py  test_operating_point.py  test_otel_sink.py  test_perf.py  test_plugin_discovery.py  test_plugin_sink_integration.py  test_report.py  test_rules_defaults.py  test_rules_engine.py  test_rules_hot_reload.py  test_rules_loader.py  test_rules_schema.py  test_rules_store.py  (+4 more)
