[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pping-lang"
version = "0.1.0a1"
description = "vLLM 性能诊断插件——把 vLLM 指标 + GPU 物理层数据喂给规则引擎，自动告诉你为什么慢"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Leon" }]
keywords = ["vllm", "llm", "performance", "profiling", "observability", "gpu"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "duckdb>=1.0.0",
    "nvidia-ml-py>=12.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# vllm 是 runtime 依赖，但安装它需要 CUDA + 体积大，dev/test 通过 fallback 解耦
vllm = ["vllm>=0.20.0,<0.22.0"]
server = ["grpcio>=1.60.0", "protobuf>=4.0.0"]   # v0.2
analyzer = ["prometheus-api-client>=0.5.0"]       # v0.3
bench = ["httpx>=0.27.0"]                         # bench module HTTP client
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0", "mypy>=1.0", "httpx>=0.27.0"]

[project.entry-points."vllm.stat_logger_plugins"]
pping_lang = "pping_lang.plugin:PpingLangStatLogger"

[project.urls]
Homepage = "https://github.com/leon/pping-lang"
Documentation = "https://github.com/leon/pping-lang/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/pping_lang"]
# Bundle non-Python resources. Hatch picks .py up automatically; everything
# else needs explicit include.
include = [
  "src/pping_lang/bench/prompts/data/*.jsonl",
  "src/pping_lang/ui/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",   # line too long — handled by formatter
  "B904",   # raise-from-inside-except — context already in stack trace
  "SIM105", # try/except/pass — explicit reads better than contextlib.suppress
  "UP038",  # isinstance tuple — both syntaxes equivalent
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
